--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="leftForm">
                             <div class="first-name">
                             <div><label for="first">First Name</label></div>
-                            <input type="text" id="first" required placeholder="First Name">
+                            <input type="text" id="first" required placeholder="First Name" maxlength="20" minlength="2">
                         </div>
 
                             <div class="email">
@@ -36,13 +36,13 @@
 
                             <div class="password">
                             <div><label for="pass">Password</label></div>
-                            <input type="password" id="pass" required placeholder="Password">
+                            <input type="password" id="pass" required placeholder="Password" maxlength="20" minlength="8">
                         </div>
                         </div>
                         <div class="rightForm">
                             <div class="last name">
                                 <div><label for="first">last Name</label></div>
-                                <input type="text" id="first" required placeholder="Last Name">
+                                <input type="text" id="first" required placeholder="Last Name" maxlength="20" minlength="2">
                             </div>
 
                             <div class="Phone number">
@@ -52,7 +52,7 @@
 
                             <div class="Confirm Password">
                                 <div><label for="conPass">Confirm Password</label></div>
-                                <input type="password" id="conPass" required placeholder="Confirm Password">
+                                <input type="password" id="conPass" required placeholder="Confirm Password" maxlength="20" minlength="8">
                             </div>
 
                         </div>                        
