very small changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                             <div class="Phone number">
                                 <div><label for="phone">Phone Number</label></div>
-                                <input type="number" id="phone" placeholder="Phone Number">
+                                <input type="tel" id="phone" placeholder="Phone Number">
                             </div>
 
                             <div class="Confirm Password">
